--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URL= "mongodb://localhost:27017/cabBookingDB"
+MONGODB_URL=mongodb://localhost:27017/cabBookingDB
+SECRET_KEY=your_secret_key
