reso;ve all issues

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URL=mongodb://localhost:27017/cabBookingDB
-# SECRET_KEY=your_secret_key
+SECRET_KEY=your_secret_key
+ADMIN_USERNAME=Admin
+ADMIN_PASSWORD=Asus@1234
